adjusted designers art title and hopefully fixed sandwichcomp on mobile

--- a/src/components/sandwichComp/sandwichMenu.css
+++ b/src/components/sandwichComp/sandwichMenu.css
@@ -13,7 +13,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 20px 30px 20px 20px 1fr;
-    transform: translateX(110%);
+    transform: translateX(120%);
     transition: transform 0.6s ease-out;
 }
 
