--- a/src/styles/responsiveDesignersArt.css
+++ b/src/styles/responsiveDesignersArt.css
@@ -170,7 +170,7 @@
     #daTitleDescription {
         grid-column: 1 / span 3;
         grid-row: 2;
-        align-self: end;
+        align-self: center;
         font-size: 13px;
         margin-left: 10px;
         margin-top: -10px;
@@ -178,7 +178,7 @@
 
     #arr1 {
         grid-column: 3 / span 4;
-        align-self: end;
+        align-self: center;
         justify-self: center;
         margin-bottom: 25px;
     }
@@ -217,6 +217,28 @@
         grid-column: 3;
     }
     
+}
+
+@media (max-width: 357px) {
+
+    #daTitle {
+        grid-column: 1 / span 4;
+        align-self: center;
+        /* margin-top: -50px; */
+    }
+    #daTitleDescription {
+        align-self: end;
+    }
+
+    #arr1 {
+        align-self: end;
+    }
+}
+
+@media (max-width: 330px) {
+    #daTitle {
+        align-self: start;
+    }
 }
 
 /******************
